# search_mcp_server

./: .env  .gitignore  Dockerfile  README.md  client.py  final_response_output.txt  main.py  pyproject.toml  smithery.yaml
src/: test_mcp_embedding.py
src/parquet_mcp_server/: chatAgent.py  chatAgent_copy.py  client.py  final_response_output.txt  main.py  output.json
src/parquet_mcp_server/src/: duckdb_helper.py  embedding_helper.py  markdown_helper.py  parquet_helper.py  postgres_helper.py  search_helper.py  supabase_db.py
src/tests/: run_tests.py  test_duckdb_conversion.py  test_embedding.py  test_markdown_processing.py  test_parquet_info.py  test_postgres_conversion.py  test_search.py  test_similarity.py
