[project]
name = "parquet_mcp_server"
version = "0.1.0"
description = "A server that provides tools for manipulating and analyzing Parquet files"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "mcp",
    "pyarrow",
    "pandas",
    "numpy",
    "requests",
    "langchain",
    "langgraph",
    "langchain-ollama",
    "duckdb",
    "psycopg2",
    "markdown",
    "beautifulsoup4",
    "clear>=2.0.0",
    "firecrawl-py>=1.16.0",
    "langchain-mcp-adapters>=0.0.7",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parquet_mcp_server"]
